--- a/web-app/package.json
+++ b/web-app/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@okta/okta-angular": "^2.2.0",
+    "keycloak-angular": "^6.1.0",
+    "keycloak-js": "^6.0.1",
     "moment": "^2.29.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
