--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ share/python-wheels/
 MANIFEST
 
 *.idea/**
+**/.vscode/
+.vscode/**
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
