--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -69,7 +69,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5.0.0 # v5.0.0
         with:
-          context: ./back
+          context: back
           file: ./docker/back/Dockerfile
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
