--- a/docker/back/Dockerfile
+++ b/docker/back/Dockerfile
@@ -4,11 +4,12 @@ EXPOSE 80
 
 WORKDIR /app
 
-COPY back/equirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY back/api/ ./app/
-COPY back/config/ ./config/
+COPY api/ ./api/
+COPY config/ ./config/
+
 RUN rm /app/config/config.py_template
 
 CMD ["waitress-serve","--port=80","--call", "api.endpoints:app.run"]
