--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           cache-name: cache-node-modules
         with:
           # caching node_modules
-          path: node_modules
+          path: web-app/node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -47,7 +47,7 @@ jobs:
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         working-directory: web-app
         run: |
-          npm ci
+          npm install
 
       - name: Build angular
         working-directory: web-app
@@ -68,6 +68,8 @@ jobs:
       context: .
       dockerfile: ./docker/web/Dockerfile
       image-name: ${{ github.repository_owner }}/megacte-web
+      artifact: web-app-dist
+      path-artifact: web-app/dist
 
   build-back:
     uses: ./.github/workflows/build-push-docker.yml
