--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,7 +1,12 @@
 FROM nginx:stable
 RUN rm /etc/nginx/conf.d/default.conf
 
+
+COPY --chown=nginx:root . /tmp
+RUN ls -la /tmp
+
 COPY --chown=nginx:root ./docker/web/nginx/ /etc/nginx/
+
 COPY --chown=nginx:root ./web-app/dist/web-app /usr/share/nginx/html/
 
 #envsubst to perform the variable substitution on nginx startup
