--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -18,9 +18,7 @@ on:
     branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
-  schedule:
-    - cron: '37 18 * * 5'
+    branches: [ "main", "develop" ]
 
 permissions:
   contents: read
